--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 Database=mongodb+srv://fastTag:fastTag@cluster0.87ydf.mongodb.net/
 port=8500
+TENANT=LQFLEET
+PARTNER_ID=LQFLEET
+PARTNER_TOKEN=Basic TFFGTEVFVA
+businessType=LQFLEET115
