--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "razorpay": "^2.9.6",
+    "uuid": "^11.1.0"
   }
 }
